--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,9 @@
 // app global css in SCSS form
+
+@import './font.scss';
+@import './text-sizes.scss';
+
+
+body {
+  font-family: 'Poppins-Medium';
+}
